--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hernan Murcia</title>
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
   </head>
   
   <body>
+  	<nav class="top-nav">
+  	  <div class="navbar">
+  		<a href="#" class="brand-link">Hernan Murcia</a>
+  	  	<div class="nav-toggle" id="top-nav-toggle">
+  	  	  <i class="fa fa-bars" aria-hidden="true"></i>
+  	  	</div>
+  	  	<ul class="nav-list nav-list-collapsed" id="top-nav-list">
+  	  	  <li><a href="#">Link 1</a></li>
+  	  	  <li><a href="#">Link 2</a></li>
+  	  	  <li><a href="#">link 3</a></li>
+  	  	</ul>
+  	  </div>
+  	</nav>
   
   <script type="text/javascript" src="js/script.js"></script>
   </body>
