--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  	<ul class="nav-list nav-list-collapsed" id="top-nav-list">
 	  	  <li><a href="#">Link 1</a></li>
 	  	  <li><a href="#">Link 2</a></li>
-	  	  <li><a href="#">link 3</a></li>
+	  	  <li><a href="#">Link 3</a></li>
 	  	</ul>
   	  
   	</nav>
